--- a/camera_ready/related_work.tex
+++ b/camera_ready/related_work.tex
@@ -74,7 +74,7 @@ We highlight that our tool \tool is the only one that fulfills all the criteria.
 \begin{table}
 	\large
 	\centering
-	\caption{Features of the publicly available tools found in the literature.}\label{tab:tools}
+	\caption{Features of the publicly available tools found in the literature. Note that some of these tools can handle richer class of specifications, compared to the reach-avoid problem that we consider in this paper.}\label{tab:tools}
 	\renewcommand{\arraystretch}{1.2}
 	\setlength{\tabcolsep}{0.7em} % for the horizontal padding
 	%\resizebox{1\columnwidth}{!}{
@@ -89,17 +89,21 @@ We highlight that our tool \tool is the only one that fulfills all the criteria.
 		\hline
 		\rowcolor{black!20} \tool  & \ding{51} &\ding{51} & \ding{51} &  \ding{51}\\
 		\hline
+		SCOTS \cite{Rungger2016scots}	&	\ding{51}	&	\ding{51}		&		&	\\
+		\hline
+		ALTRO \cite{howell2019altro}		&	\ding{51}	&	&	&\\
+		\hline
 		FastTrack \cite{herbert2017fastrack}& \ding{51} & \ding{51} &   &   \\
 		\hline
 		RealSyn \cite{fan2018controller}& &\ding{51} &  &  \\
 		\hline
 		Factest \cite{fan2020fast}& \ding{51} &  &  &  \\
 		\hline
-		Model mismatch(SOS) \cite{singh2018robust}  & \ding{51} &  &  &  \\
+		Model mismatch (SOS) \cite{singh2018robust}  & \ding{51} &  &  &  \\
 		\hline
 		RTD \cite{kousik2020bridging} & \ding{51} & \ding{51} &  &  \\
 		\hline
-		Fly by logic \cite{Pant2018multiquad}  & \ding{51} & & \ding{51} & \ding{51} \\
+		Fly-by-logic \cite{Pant2018multiquad}  & \ding{51} & & \ding{51} & \ding{51} \\
 		\hline
 		Distributed team lift \cite{jackson2020scalable} & \ding{51} &  & \ding{51} &  \\
 		\bottomrule
