added copyright info

--- a/camera_ready/main.tex
+++ b/camera_ready/main.tex
@@ -42,9 +42,20 @@
 % \@ifclassloaded{acmart}{\keywords{Abstraction Based Controller Design, Tracking Control}}{}
 \makeatother
 
+% copyright info
+\acmYear{2021}\copyrightyear{2021}
+\setcopyright{rightsretained}
+\acmConference[ICCPS '21]{ACM/IEEE 12th International Conference on Cyber-Physical Systems (with CPS-IoT Week 2021)}{May 19--21, 2021}{Nashville, TN, USA}
+\acmBooktitle{ACM/IEEE 12th International Conference on Cyber-Physical Systems (with CPS-IoT Week 2021) (ICCPS '21), May 19--21, 2021, Nashville, TN, USA}
+\acmPrice{}
+\acmDOI{10.1145/3450267.3450548}
+\acmISBN{978-1-4503-8353-0/21/05}
+
+
 \sloppy
 
 \begin{document}
+
 
 \begin{abstract}
 	\input{abstract}
