--- a/camera_ready/related_work.tex
+++ b/camera_ready/related_work.tex
@@ -103,7 +103,7 @@ We highlight that our tool \tool is the only one that fulfills all the criteria.
 		\hline
 		RTD \cite{kousik2020bridging} & \ding{51} & \ding{51} &  &  \\
 		\hline
-		Fly-by-logic \cite{Pant2018multiquad}  & \ding{51} & & \ding{51} & \ding{51} \\
+		Fly-by-Logic \cite{Pant2018multiquad}  & \ding{51} & & \ding{51} & \ding{51} \\
 		\hline
 		Distributed team lift \cite{jackson2020scalable} & \ding{51} &  & \ding{51} &  \\
 		\bottomrule
