table is updated

--- a/camera_ready/experiments.tex
+++ b/camera_ready/experiments.tex
@@ -11,7 +11,7 @@
 	number of input-state pairs of the finite abstraction for the largest ABCD task ($N_l$), 
 	abstraction and synthesis times in SCOTS for that task (respectively $T_{l}^{\mathit{abs}}$ and $T_{l}^{\mathit{syn}}$), 
 	number of input-state pairs of the finite state abstraction for the global ABCD ($N_g$), 
-	abstraction and synthesis times for computing a global controller for the product system using SCOTS (respectively $T_{g}^{\mathit{abs}}$ and $T_{g}^{\mathit{syn}}$). \MZ{numbers are going to change again}
+	abstraction and synthesis times for computing a global controller for the product system using SCOTS (respectively $T_{g}^{\mathit{abs}}$ and $T_{g}^{\mathit{syn}}$).
 	% For local ABCD, the reported numbers correspond to the maximum value among all of the agents.
 	}
 		\label{tab:runtimes}
@@ -28,17 +28,17 @@
 			&$T_{g}^{\mathit{plan}}$	&	$N_l$	&	$T_{l}^{\mathit{abs}}$	&	$T_{l}^{\mathit{syn}}$	&	$N_g$	&	$T_g^{\mathit{abs}}$	&	$T_g^{\mathit{syn}}$\\
 			\hline
 			
-			Multi-drone path planning & 125 & 1.15e8 & 47.66  & 7.9	& 2.73e104	&	OOM	&	OOM \\
+			Multi-drone path planning & 77.85 & 1.13e8 & 30.75  & 6.66	& 2.70e110	&	OOM	&	OOM \\
 			
 			\hline
 			
-			Crane and vehicle & 	0.65 & 8.56e8	&	511  & 91	&	2.16e18	&	OOM	&	OOM\\
+			Crane and vehicle & 	0.65 & 8.56e8	&	511.24  & 91.43	&	2.16e18	&	OOM	&	OOM\\
 			
 			\hline
 			
-			Lane merging & 100 & 1.01e8	&	37.60  & 9.51	&	3.84e65	&	OOM	&	OOM\\
+			Lane merging & 89.02 & 1.07e8	&	22.79  & 5.29	&	1.69e59	&	OOM	&	OOM\\
 			\hline
-			Multi-drone formation control & 163 & 4.02e8	&	69.78  & 13.6	&	3.7e59	&	OOM	&	OOM\\
+			Multi-drone formation control & 114.34 & 1.55e8	&	39.46  & 7.83	&	3.65e50	&	OOM	&	OOM\\
 			\hline
 	\end{tabular}%}
 \end{table*}
