Box plot is added

--- a/camera_ready/experiments.tex
+++ b/camera_ready/experiments.tex
@@ -73,7 +73,7 @@ As reflected in Table~\ref{tab:runtimes}, memory requirement for the global ABCD
 
 \begin{figure}[t]
 	\centering
-	\includegraphics[width=0.45\textwidth]{figures/updated_box_plot.eps}
+	\includegraphics[width=0.45\textwidth]{figures/final_box_plot.eps}
 	\caption{Variations of run times of local ABCD among different agents for three case studies.}
 	\label{fig:box_plot}
 	\vspace{-.5cm}
