--- a/camera_ready/related_work.tex
+++ b/camera_ready/related_work.tex
@@ -1,74 +1,79 @@
+% !TEX root = main.tex
+
 \smallskip
 \noindent\textbf{Related Work}
 %
-The field of multi-agent planning is too large for a comprehensive survey; we point to very good text books
+The field of multi-agent planning is too large for a comprehensive survey; we point to the text books
 \cite{LaValle2006,LaValle1998planning,choset2005principles,russel2010AIplanning} for an introduction.
-We categorize closely related work into (1) ones combining planning and tracking controller synthesis, 
-(2) ones addressing multi-agent formal controller synthesis, and 
-(3) approaches combining (1) and (2).
-Following are the detailed surveys of these categories:
-
+We categorize closely related work into (1) the ones combining planning and tracking controller synthesis, 
+(2) the ones addressing formal multi-agent controller synthesis, and 
+(3) the ones combining (1) and (2). We provide a survey of these categories as follows:
+%
 \begin{enumerate}[(1)]
 	\item Techniques combining high-level planning and low-level tracking are a staple of classical planning and control. 
 More recently, several techniques consider the problem of formal guarantees for such planners.
-Existing methods can be categorized based on the dynamics that they can handle (e.g., linear or nonlinear),
-whether the system is subject to disturbances, considered class of specifications, and scalability. 
-A common approach to solve for reach-avoid specifications is to perform the high-level planning over a lower dimensional dynamical model and then use
-Sum-of-Squares (SOS) programming or Hamilton Jacobi (HJ) or satisfiability modulo convex programming (SMC) methods to obtain a low-level controller ensuring a bounded error between the 
+Existing works differ in the dynamics that they can handle (e.g., linear or nonlinear),
+considered class of specifications, including disturbances, and scalability. 
+A common approach is to perform the high-level planning over a lower dimensional model and then use
+Sum-of-Squares programming (SOS), Hamilton Jacobi (HJ), or satisfiability modulo convex programming (SMC) to obtain a low-level controller ensuring a bounded error between the 
 two models \cite{herbert2017fastrack,meyer2019,singh2018robust,Nilsson:2018}. 
+
 %\KM{Nothing has been stated about \cite{DBLP:journals/corr/abs-1911-09773,sun2019}.} 
 In contrast to \cite{herbert2017fastrack,singh2018robust}, our method does not require finding 
-a linear mapping between the low and high dimensional models. Meyer et al. considered reach-avoid problems for perturbed non-linear control affine systems \cite{meyer2019}. At first, they create a low-order system and use SOS programming to compute a controller ensuring a bounded error between the two systems. In the second step, they use abstraction-based controller design to compute a controller for the low-order system while taking the error into account. While their method can provide guarantee against worst-case disturbances, it is not clear if SOS programming always scales to the higher dimensions. 
-Nilsson et al.  proposed a method that decomposes the state space into a lower-order planning space, and a higher-order internal dynamics space, so that planning can be performed fast and accurate tracking can be achieved using a set of control barrier functions that are computed using SOS programming method \cite{Nilsson:2018}. Despite providing guarantees for the worst-case bounded disturbances, their method is not capable of solving reach-avoid tasks which involve dynamic obstacles as in the multi-agent case.
+a linear mapping between the low and high dimensional models. Meyer et al. \cite{meyer2019} considered reach-avoid problems for perturbed non-linear control affine systems. They create a lower dimensional model and use SOS programming to compute a controller ensuring a bounded error between the two models. Then, they use ABCD to compute a controller for the low-order model while taking the error into account. While their method can provide guarantee against worst-case disturbances, it is not clear if SOS always scales to the higher dimensions.
+
+Nilsson et al. \cite{Nilsson:2018} provide a method that decomposes the state space into a lower-order planning space, and a higher-order internal dynamics space, so that fast planning and accurate tracking can be achieved using a set of control barrier functions computed based on SOS. Despite providing guarantees for the worst-case bounded disturbances, their method is not capable of solving reach-avoid tasks which involve dynamic obstacles as in the multi-agent case.
 %that governs the motion in planning space. 
 %The planning is performed fast since it is restricted to the lower-order space. To guarantee following of the planned trajectory in the lower-order space, control barrier functions are computed using SOS method. This method, however, cannot deal with dynamic obstacles as is needed in tackling collision avoidance.}
-While we choose SCOTS because the algorithm can be effectively parallelized \cite{KhaledZ19pfaces}, in principle, we could
-also use SOS or Hamilton Jacobi or SMC approaches. %The existing schemes that solve the guaranteed motion planning problems in a centralized manner (e.g. \cite{sun2019}) cannot scale well.
-Some other works only consider special classes of systems such as linear (\cite{fan2018controller,wongpiromsarn2012receding,Rodionova2020LearningtoFlyLC}), 
-disturbance-free (\cite{tedrake2010lqr,fan2020fast,Srinivasan2018}), or finite transition systems (\cite{Yang2017milp}). 
+While we have chosen SCOTS since the underlying algorithm can be effectively parallelized \cite{KhaledZ19pfaces}, in principle, we could
+also use SOS, Hamilton Jacobi, or SMC approaches. %The existing schemes that solve the guaranteed motion planning problems in a centralized manner (e.g. \cite{sun2019}) cannot scale well.
+
+Other works only consider special classes of models such as linear \cite{fan2018controller,wongpiromsarn2012receding,Rodionova2020LearningtoFlyLC}, 
+disturbance-free \cite{tedrake2010lqr,fan2020fast,Srinivasan2018}, or finite transition systems \cite{Yang2017milp}. 
 In contrast, our method supports arbitrary 
 %continuous time
  nonlinear dynamics and provides a guarantee 
-against worst-case bounded disturbance.
-	\item Chen et al.\ proposed a method, using control barrier functions, that requires some form of inter-robot 
-communication and does not consider external disturbances \cite{Chen2018cbf}.
-Sahin et al.\ proposed a method that requires the group of robots to be homogeneous \cite{Shahin2017cltl}.
+against worst-case bounded disturbances.
+	\item Chen et al.\ \cite{Chen2018cbf} provide a method, using control barrier functions, that requires some form of inter-robot 
+communication and does not consider external disturbances.
+Sahin et al.\ \cite{Shahin2017cltl} propose a method that requires the group of robots to be homogeneous.
 There are methods which do not consider external disturbances and do not provide formal guarantees \cite{jackson2020scalable}.
-	\item Alonso-Mora et al.\ proposed a method for formation control of a group of communicating homogeneous robots \cite{alonso2019distributed}.
+	\item Alonso-Mora et al.\ \cite{alonso2019distributed} provide a method for formation control of a group of communicating homogeneous robots.
 They first synthesize nominal controller using a fast randomized geometric planning method, namely RRT, and 
 then use optimal control to track the obtained nominal solution.
-Unlike us, they neither consider external disturbances nor provide formal guarantees. Pant et al. considered STL expressable multi-quadrotor missions \cite{Pant2018multiquad}. They find the reference trajectory by maximizing robustness with respect to the given STL specification, and synthesize tracking controllers so that the reference trajectory is followed closely. Although their method provides some robustness margin, it is not capable of providing guarantee against worst-case bounded additive disturbances as we do. Further, they only consider time-bounded STL specifications.	
-Recently, Xiao et al.\ \cite{xiao2019merging} proposed a method for synthesis of distributed controllers for a 
-set of autonomous vehicles in a lane merging situation.
-They use optimal control to compute a nominal controller for the product system, 
-whose goal is to ensure some safety constraints together with ensuring optimality in some respect (like fuel consumption).
-After that, they use control barrier functions for each robot for tracking the obtained nominal solution.
-Even though they consider external noise in the system, yet, when there is noise, their controllers can 
-occasionally violate the safety constraints for finite number of time steps.
-Moreover, they only consider simple linear systems (double integrator) as vehicle models. 
-Nikou et al. studied the problem of robust navigation for multi-agent systems \cite{Nikou2019}. 
-%They consider additive bounded modelling disturbance. 
-They use optimal control to compute a reference trajectory for the nominal dynamics by neglecting disturbance, and invoke a  pre-computed feedback controller to guarantee that the perturbed system's trajectory remains within a bounded hyper-cube around the reference trajectory. In order to avoid collision with obstacles or other agents, their method relies on sensing capabilities of the agents. In contrast, our method does not requires any sensing ability in order to guarantee safe navigation of multi-agents. Sun et al. considered the problem of robust motion planning of multi-agent systems for LTL specifications, under the presence of bounded-additive disturbance and denial of service attacks against the communications between the robots and the base stations \cite{sun2019}. First, they compute a feedback controller that forces the system's trajectories to remain within a robust control invariant set under the worst-case disturbance scenario. 
-%For piecewise-affine systems, there exist effective algorithms for computing the feedback controller and the corresponding invariant set. 
-Next, they use SMC programming methods to compute a feasible nominal trajectory together with an open-loop controller, and by adding up the nominal
-open-loop control input and the feedback control law they construct the final control input. Despite being able to provide guarantees against the worst-case disturbances, the required time to tackle higher-dimensional reach-avoid problems increases significantly, since their implementation is centralized.%The main drawback of their method is central implementation, since tackling reach-avoid problems in higher dimensions takes significantly longer time.
- %However, they assume that agents are able to communicate while moving; and their target is to satisfy input-to-state stability. In fact, their method is not able to tackle collision avoidance for static/dynamic obstacles.}
+Unlike us, they neither consider external disturbances nor provide formal guarantees. Pant et al.\ \cite{Pant2018multiquad} have studied multi-quadrotor missions with signal temporal logic (STL) specifications. They find the reference trajectory by maximizing robustness of the STL specification, and then synthesize tracking controllers. Their method can handle only specifications with bounded horizon and does not provide guarantee against disturbances.
 
+Recently, Xiao et al.\ \cite{xiao2019merging} propose a method for synthesis of distributed controllers for a 
+set of autonomous vehicles in a lane merging situation. They consider only simple linear systems as vehicle models, use global optimal control to find a nominal controller, and employ local control barrier functions with safety constraints.
+Their designed controllers is not provably safe when there is noise and can occasionally violate the safety constraints.
+ %
+Nikou et al.\ \cite{Nikou2019} have studied the problem of robust navigation for multi-agent systems based on nominal reference trajectory and pre-computed feedback controllers. Their approach requires sensing capabilities of the agents to avoid collision. In contrast, our method does not requires any sensing capabilities of multi-agents.
+
+%They consider additive bounded modelling disturbance. 
+%They use optimal control to compute a  and employ a  to keep the trajectories within a bounded distance from the reference trajectory.
+Sun et al.\ \cite{sun2019} have studied motion planning of multi-agent systems with linear temporal logic (LTL) specifications, under the presence of disturbances and denial of service attacks.
+Their approach uses SMC programming to compute a feasible nominal trajectory and employs feedback controllers to gain robustness.
+%First, they compute a feedback controller that forces the system's trajectories to remain within a robust control invariant set under the worst-case disturbance scenario. 
+%For piecewise-affine systems, there exist effective algorithms for computing the feedback controller and the corresponding invariant set. 
+%Next, they use  together with an open-loop controller, and by adding up the nominal open-loop control input and the feedback control law they construct the final control input.
+Despite being able to provide guarantees against disturbances, their implementation is centralized, thus the required time increases significantly for high-dimensional reach-avoid specifications.%The main drawback of their method is central implementation, since tackling reach-avoid problems in higher dimensions takes significantly longer time.
+ %However, they assume that agents are able to communicate while moving; and their target is to satisfy input-to-state stability. In fact, their method is not able to tackle collision avoidance for static/dynamic obstacles.}
+%
 There are other works that use a pre-defined motion primitive library to perform planning for multi-robot 
 systems \cite{saha2016implan,BanusicMPSZ19pgcd,Gavran2017antlab,desai2017drona}. 
-In contrast, our method directly deals with the dynamical model. 
-Our construction can also be seen as an \emph{assume guarantee} technique that decomposes the global problem based on nominal trajectory tubes; similar decompositions have been studied in the discrete case \cite{alur2015pattern,majumdarassume}.
-The closest related work that match our level of generality is the one by Bansal et al.\ \cite{bansal2017safe}.
-However, they assume that each robot has its own reach-avoid specification and they only need to avoid collision with the other robots.
-In contrast, we allow global reach-avoid specifications, which subsume the specifications that they consider.
-In fact, there are control problems which cannot be easily expressed in their problem setting, but can be easily expressed in our problem setting: 
-examples are robots maintaining a formation while fulfilling their tasks \cite{alonso2019distributed}, etc.
+In contrast, our method deals with the dynamical model directly.
+
+Our construction can also be seen as an \emph{assume-guarantee} technique that decomposes the global problem based on nominal trajectory tubes. Similar decompositions have been studied in the discrete case \cite{alur2015pattern,majumdarassume}.
+The closest related work that matches our level of generality is the work by Bansal et al.\ \cite{bansal2017safe}.
+However, they assume that each robot has its own reach-avoid specification while avoiding collision with the other robots.
+In contrast, we allow global reach-avoid specifications, which subsume their class of specifications.
+In fact, there are control problems that can be easily handled by our approach and cannot be encoded in their setting. An example is robots maintaining a formation while fulfilling their tasks \cite{alonso2019distributed}.
 \end{enumerate}
 
 %Our experiments show that \tool is efficient in solving reach-avoid tasks for multi-agent systems. 
 %However, there are other tools which claim they can solve similar tasks. 
-Not every approach which are listed above have available implementations.
-In Table~\ref{tab:tools}, we summarize the main features of some of the publicly available tools, which we are aware of.
+A subset of approaches listed above have available implementations.
+In Table~\ref{tab:tools}, we summarize the main features of the publicly available tools.
 We highlight that our tool \tool is the only one that fulfills all the criteria.
 
 \begin{table}
