--- a/camera_ready/prelims.tex
+++ b/camera_ready/prelims.tex
@@ -207,7 +207,7 @@ In addition, we can also specify more general tasks which cannot be easily decom
 One example is the \emph{formation control problem}, which we consider in the example in Sec.~\ref{sec:global formation control}, where a set of robots need to 
 reach some location while maintaining a given geometric formation. 
 Since the formation is defined using the relative positions of the robots, it is not possible to decompose this task into separate local reach-avoid subtasks.
-
+%
 % *** The old illustrative example ***
 %\begin{example}
 %	Consider our motivating example in which there are two control systems: a crane and a factory vehicle. The detailed models for both of the systems are given in Sec.~\ref{subsec}. 
@@ -221,17 +221,16 @@ Since the formation is defined using the relative positions of the robots, it is
 %%\RM{give a simple example that shows the dynamics and the objective. In the objective, you can use the distance between two states, etc.}
 %\qed
 %\end{example}
-
-\new{
 \begin{example}
+\new{
 	Consider two simple one-dimensional control systems $\Sigma^1=(X^1,x_\init^1,U^1,W^1,f^1)$ and $\Sigma^2=(X^2,x_\init^2,U^2,W^2,f^2)$ whose states evolve over the real line, and at every time step, the values of their states can be either incremented or decremented by $1$ independently.
-	(We ignore the effect of the disturbances for simplicity.)
+	We ignore the effect of the disturbances for simplicity.
 	More formally, $X^1=X^2=\mathbb{R}$, $U^1=U^2=\set{-1,1}$, $W^1=W^2=\set{0}$, and $f^1(x^1,u^1)\equiv x^1+u^1$, $f^2(x^2,u^2)\equiv x^2+u^2$.
-	Suppose the initial states of $\Sigma^1$ and $\Sigma^2$ are $x_\init^1=0$ and $x_\init^2=5$ respectively, and assume that the specification requires them to \emph{simultaneously} reach the respective goal sets $\goal^1=\set{10}$ and $\goal^2=\set{20}$ while \emph{maintaining a distance} of at least $5$ among themselves.
+	Suppose the initial states are $x_\init^1=0$ and $x_\init^2=5$, and assume that the specification requires them to \emph{simultaneously} reach the respective goal sets $\goal^1=\set{10}$ and $\goal^2=\set{20}$ while \emph{maintaining a distance} of at least $5$ among themselves.
 	This specification can be easily formulated as a reach-avoid objective $\left(\lnot\avoid\,\mathcal{U}\, \goal\right)$ for the overall two-dimensional product system, where $\avoid = \set{ (x^1,x^2)\in \mathbb{R}^2  \mid |x^1-x^2| < 5}$ and $\goal = (10,20)$.
 	On the other hand, a decomposition of this objective into independent reach-avoid sub-tasks for $\Sigma^1$ and $\Sigma^2$ is not possible, because the task has been specified in terms of their \emph{relative distance} and their \emph{simultaneous arrival} at the goal sets.
+	}
 \end{example}
-}
 
 
 
