--- a/camera_ready/main.tex
+++ b/camera_ready/main.tex
@@ -51,6 +51,19 @@
 \acmDOI{10.1145/3450267.3450548}
 \acmISBN{978-1-4503-8353-0/21/05}
 
+% CCS
+\begin{CCSXML}
+<ccs2012>
+   <concept>
+       <concept_id>10010520.10010553.10010554.10010556</concept_id>
+       <concept_desc>Computer systems organization~Robotic control</concept_desc>
+       <concept_significance>500</concept_significance>
+       </concept>
+ </ccs2012>
+\end{CCSXML}
+
+\ccsdesc[500]{Computer systems organization~Robotic control}
+
 
 \sloppy
 
