--- a/camera_ready/related_work.tex
+++ b/camera_ready/related_work.tex
@@ -47,7 +47,7 @@ Recently, Xiao et al.\ \cite{xiao2019merging} propose a method for synthesis of 
 set of autonomous vehicles in a lane merging situation. They consider only simple linear systems as vehicle models, use global optimal control to find a nominal controller, and employ local control barrier functions with safety constraints.
 Their designed controllers is not provably safe when there is noise and can occasionally violate the safety constraints.
  %
-Nikou et al.\ \cite{Nikou2019} have studied the problem of robust navigation for multi-agent systems based on nominal reference trajectory and pre-computed feedback controllers. Their approach requires sensing capabilities of the agents to avoid collision. In contrast, our method does not requires any sensing capabilities of multi-agents.
+Nikou et al.\ \cite{Nikou2019} have studied the problem of robust navigation for multi-agent systems based on nominal reference trajectory and pre-computed feedback controllers. Their approach requires sensing capabilities of the agents to avoid collision. In contrast, our method does not requires any sensing capabilities of the agents.
 
 %They consider additive bounded modelling disturbance. 
 %They use optimal control to compute a  and employ a  to keep the trajectories within a bounded distance from the reference trajectory.
